[package]
name = "unity-discordbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.10.0"
rand = "0.8"
chrono = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.13"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }